--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,130 @@
 body, svg{
     font-family: Lato;
 }
+
+
+
+.bar.placeMain{
+    fill: #A2D4EC;
+    stroke: #fff;
+}
+.bar.placeMain.active{
+    fill: #1696d2;
+
+}
+.bar.hidden{
+    opacity: 0;
+}
+
+
+
+
+/********** TOGGLE STYLES ***************/
+/* The switch - the box around the slider */
+.switch {
+    position: relative;
+    display: inline-block;
+    width: 67px;
+    height: 22px;
+}
+
+/* Hide default HTML checkbox */
+.switch input {
+    opacity: 0;
+    width: 0;
+    height: 0;
+}
+
+/* The slider */
+.slider {
+    position: absolute;
+    cursor: pointer;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: #E4E4E4;
+    -webkit-transition: .4s;
+    transition: .4s;
+}
+
+.slider:before {
+    position: absolute;
+    content: "";
+    height: 22px;
+    width: 22px;
+    left: 0;
+    bottom: 0;
+    background-color: #898787;
+    -webkit-transition: .4s;
+    transition: .4s;
+}
+
+input:focus + .slider {
+    box-shadow: 0 0 1px #2196F3;
+}
+
+input:checked + .slider:before {
+    background-color: #1696d2;
+    -webkit-transform: translateX(44px);
+    -ms-transform: translateX(44px);
+    transform: translateX(44px);
+}
+
+/* Rounded sliders */
+.slider.round {
+    border-radius: 11px;
+}
+
+.slider.round:before {
+    border-radius: 50%;
+}
+
+.toggleGroup {
+    width: 275px;
+    font-size: 1rem;
+}
+
+.toggleGroup > p {
+    font-size: 1.125rem;
+    border-bottom: 1px solid #1696d2;
+}
+
+.toggleContainer {
+    position: absolute;
+    top: 4px;
+    left: 416px;
+}
+.toggleContainer.tc15{
+    left: 600px;
+}
+
+.toggleLabel {
+    display: block;
+    margin-bottom: 0.5em;
+}
+
+.toggle.on {
+    background-position: -41px 0px;
+        background-color: #1696d2;
+
+}
+.toggle.off {
+    background-position: .5px 0px;
+    background-color: #9c9c9c;
+}
+.toggle {
+    background-image: url(../img/toggle-bg.png);
+    background-repeat: no-repeat;
+    width: 72px;
+    height: 30px;
+    border-radius: 20px;
+    display: inline-block;
+    background-size: cover;
+    cursor: pointer;
+    position: relative;
+    -webkit-transition: background-position .1s ease-in;
+    -moz-transition: background-position .1s ease-in;
+    -o-transition: background-position .1s ease-in;
+    transition: background-position .1s ease-in;
+}
