--- a/css/main.css
+++ b/css/main.css
@@ -2,8 +2,20 @@ body, svg{
     font-family: Lato;
     color: #353535;
 }
-
-
+.textBinder, .dataBinder{
+    position: fixed;
+    top: 0px;
+    left: 0px;
+    z-index: -1;
+    opacity: 0;
+}
+.textBinder.placeMain{
+    padding-left: 25px;
+    font-size: 24px;
+}
+.textBinder.race{
+    font-size: 24px;
+}
 .barLabel{
     font-family: Lato;
     font-size: 16px;
@@ -15,14 +27,26 @@ body, svg{
 .barLabel.hidden{
     opacity: 0;
 }
-.barLabel.active{
+.barLabel.activeRace{
     font-weight: bold;
 }
+/*svg.stacked .barLabel.placeMain{
+    fill: #A2D4EC !important;
+}
+svg.stacked .barLabel.placeMain.activeRace{
+    fill: #1696d2 !important;
+}
+svg.stacked .barLabel.placeSecondary{
+    fill: #BCDEB4 !important;
+}
+svg.stacked .barLabel.placeSecondary.activeRace{
+    fill: #55B748 !important;
+}*/
 .bar.placeMain{
     fill: #A2D4EC;
     stroke: #fff;
 }
-.bar.placeMain.active{
+.bar.placeMain.activeRace{
     fill: #1696d2;
 
 }
@@ -33,13 +57,16 @@ body, svg{
     fill: #BCDEB4;
     stroke: #fff;
 }
-.bar.placeSecondary.active{
+.bar.placeSecondary.activeRace{
     fill: #55B748;
 
 }
 .tick text{
     font-family: 'Lato';
     font-size: 16px;
+}
+.tick text.activeRace{
+    font-weight: bold;
 }
 .axis.y path, .axis.y .tick line{
     display: none;
@@ -51,15 +78,21 @@ body, svg{
     top: 0px;
     white-space: nowrap;
 }
-
+.stackedAxisLabel{
+    font-size: 14px;
+    fill: #9d9d9d;
+    font-weight: 400;
+}
 
 
 
 
 #placeClose{
     width: 20px;
+    height: 20px;
     cursor: pointer;
-    top: 5px;
+    top: 3px;
+    left: 107px;
     position: relative;
     opacity: .5;
     cursor: default;
@@ -68,6 +101,60 @@ body, svg{
     opacity: 1;
     cursor: pointer;
 }
+
+
+
+
+
+
+
+/*Share box*/
+.shareRow{
+    margin-top: 26px;
+}
+.shareRow span{
+    display: inline-block;
+    float: left;
+}
+.shareText{
+    margin-right: 4px;
+}
+.shareIcon{
+    margin-left: 8px;
+    position: relative;
+    top: 5px;
+}
+.fbShare{   
+    background-image: url('../img/fb.png');
+    background-size: 26px;
+    width: 26px;
+    height: 26px;
+    cursor: pointer;
+}
+.fbShare:hover{   
+    background-image: url('../img/fbActive.png')
+}
+.twitterShare{   
+    background-image: url('../img/twitter.png');
+    background-size: 26px;
+    width: 26px;
+    height: 26px;
+    cursor: pointer;
+}
+.twitterShare:hover{   
+    background-image: url('../img/twitterActive.png')
+}
+.linkedinShare{   
+    background-image: url('../img/linkedin.png');
+    background-size: 26px;
+    width: 26px;
+    height: 26px;
+    cursor: pointer;
+}
+.linkedinShare:hover{   
+    background-image: url('../img/linkedinActive.png')
+}
+
 
 
 
@@ -341,12 +428,7 @@ select{
     z-index: 3;
 }
 
-#header-pinned{
-    border-bottom: none !important;
-}
-#header-pinned .share-icons .shareThisP{
-    border-left: none !important;
-}
+
 
 
 
@@ -577,7 +659,7 @@ h4.datePublished{
 .loaderNote.filters{
     font-size: 16px;
     font-style: italic;
-    width: 320px;
+    width: 322px;
     line-height: 146%;
     margin-top: -20px;
     margin-bottom: 30px;
@@ -651,7 +733,7 @@ h4.datePublished{
 /*    line-height: 146%;
     text-align: center;
     font-size: 24px;*/
-    font-weight: 300;
+    font-weight: 400;
 }
 
 
@@ -1002,6 +1084,15 @@ ul{
 
 
 
+
+
+
+
+
+
+
+
+
  /*Layout*/
 
  .chartTitle{
@@ -1011,12 +1102,15 @@ ul{
     margin-bottom: 20px;
     padding-bottom: 8px;
  }
+ .chartsContainer{
+    display: inline-block;
+ }
  .chartContainer{
-    width: 315px;
+    width: 322px;
     display: inline-block;
     float: left;
  }
- .chartContainer.hhs, .chartContainer.ho_rate{
+ .chartContainer.hhs, .chartContainer.ho_rate, .chartContainer.mean_hv{
     margin-right: 100px;
  }
  .chartsContainer.topCharts{
@@ -1029,14 +1123,183 @@ ul{
  .chart{
     position: relative;
  }
+ .shareTtContainer{
+    float: left;    
+}
+.shareTtContainer.topShare{
+    padding: 40px 35px;
+    background: #f5f5f5;
+    margin-top: -75px;
+    margin-bottom: 69px;
+    width: calc(100% - 80px);
+}
+.shareTtContainer.hvShare, .shareTtContainer.hoShare{
+    float: left;
+    width: 320px;
+    font-size: 20px;
+    margin-top: 32px;
+    font-weight: 400;
+}
 
- .temp1{
-    position: fixed;
-    top: 56px;
-    left: 140px;
+
+#mainMenuContainer{
+    font-size: 24px;
+    background: #fff;
+    z-index: 6;
+    width: 760px;
+}
+ .placeMain.placeMenu{
+    display: inline-block;
+    position: relative;
+    margin-left: 4px;
+    /*position: fixed;*/
+/*    top: 56px;
+    left: 140px;*/
  }
- .temp2{
-    position: fixed;
-    top: 56px;
-    left: 480px;
+ input#placeMain{
+    font-family: 'Lato';
+    border: none;
+    color: #000;
+    border-bottom: 2px solid #000;
+    max-width: 320px;
+    padding-left: 25px;
+    padding-bottom: 6px;
+    text-overflow: ellipsis;
  }
+ .placeSearch.placeMain{
+    width: 20px;
+    position: absolute;
+    top: 7px;
+ }
+ #raceMenu-button{
+    font-family: 'Lato';
+    font-size: 24px;
+    font-weight: 500;
+    color: #1696d2;
+    width: 240px;
+    padding-left: 3px;
+    margin-right: 4px;
+    background: none;
+    border: none;
+    border-bottom: 2px solid #000;
+    padding-bottom: 6px;
+    padding-top: 3px;
+}
+.ui-selectmenu-text{
+    margin-right: 0px;
+    text-overflow: unset;
+    overflow: initial;
+}
+.ui-selectmenu-icon.ui-icon.ui-icon-triangle-1-s{
+    background-image: url('../img/menuDown.png');
+    background-size: 20px;
+    background-position: center;
+    width: 20px;
+    top: 8px;
+    right: -22px;
+}
+.ui-selectmenu-icon.ui-icon.ui-icon-triangle-1-s.open{
+    background-image: url('../img/menuUp.png');
+}
+.ui-state-active, .ui-widget-content .ui-state-active, .ui-widget-header .ui-state-active, a.ui-button:active, .ui-button:active, .ui-button.ui-state-active:hover{
+    border: 1px solid #1696d2;
+    background: #1696d2;
+}
+.ui-menu .ui-menu-item{
+    font-family: Lato;
+    font-size: 16px;
+}
+ #secondaryMenuContainer{
+    position: relative;
+    top: -50px;
+    right: -760px;
+    width: 295px;
+    background: white;
+    font-size: 16px;
+ }
+ #secondaryHeader{
+    font-size: 18px;
+    font-weight: bold;
+ }
+ .secondaryRow{
+    display: block;
+    clear: both;
+ }
+ .secondaryRow span{
+    display: inline-block;
+    float: left;
+}
+.secondaryRow span.placeMain.placeLabel{
+    max-width: 166px;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
+    border-bottom: 2px solid black;
+    padding-left: 51px;
+    padding-right: 5px;
+    position: absolute;
+    left: 67px;
+    height: 29px;
+}
+#placeSecondary{
+    font-family: 'Lato';
+    font-size: 16px;
+    border: none;
+    border-bottom: 2px solid black;
+    padding-bottom: 4px;
+    text-indent: 47px;
+    position: absolute;
+    left: 110px;
+    background: none;
+    top: 69px;
+}
+
+.key{
+    width: 18px;
+    height: 18px;
+    display: inline-block;
+    margin-right: 6px;
+    top: 6px;
+    position: relative;
+}
+.keyActive.keyMain{
+    background: #1696d2;
+}
+.keyDeactive.keyMain{
+    background: #A2D4EC;
+}
+.keyActive.keySecondary{
+    background: #55B748;
+}
+.keyDeactive.keySecondary{
+    background: #BCDEB4;
+}
+.secondaryText{
+    margin-right: 10px;
+}
+input#placeSecondary{
+    width: 177px;
+    font-family: 'Lato';
+    font-size: 16px;
+    border: none;
+    border-bottom: 2px solid black;
+    padding-bottom: 6px;
+    text-indent: 47px;
+    position: absolute;
+    left: 110px;
+    background: none;
+    top: 69px;
+}
+input#placeSecondary.defaultText{
+    font-style: italic;
+    color: #9d9d9d;
+}
+
+
+
+
+
+
+
+
+
